# api/src/api/generated/models/experiment_run.py
@@ -1,0 +1,62 @@
+# coding: utf-8
+
+from __future__ import annotations
+import pprint
+import json
+
+from datetime import datetime
+from pydantic import BaseModel, ConfigDict, StrictInt, StrictStr
+from typing import Any, ClassVar, Dict, List, Optional
+try:
+    from typing import Self
+except ImportError:
+    from typing_extensions import Self
+
+
+class ExperimentRun(BaseModel):
+    """ExperimentRun"""
+    id: StrictInt
+    experiment_id: StrictInt
+    label: StrictStr
+    started_at: datetime
+    ended_at: Optional[datetime] = None
+    created_at: datetime
+    updated_at: datetime
+    __properties: ClassVar[List[str]] = ["id", "experiment_id", "label", "started_at", "ended_at", "created_at", "updated_at"]
+
+    model_config = {
+        "populate_by_name": True,
+        "validate_assignment": True,
+        "protected_namespaces": (),
+    }
+
+    def to_str(self) -> str:
+        return pprint.pformat(self.model_dump(by_alias=True))
+
+    def to_json(self) -> str:
+        return json.dumps(self.to_dict())
+
+    @classmethod
+    def from_json(cls, json_str: str) -> Self:
+        return cls.from_dict(json.loads(json_str))
+
+    def to_dict(self) -> Dict[str, Any]:
+        _dict = self.model_dump(by_alias=True, exclude={}, exclude_none=True)
+        return _dict
+
+    @classmethod
+    def from_dict(cls, obj: Dict) -> Self:
+        if obj is None:
+            return None
+        if not isinstance(obj, dict):
+            return cls.model_validate(obj)
+        _obj = cls.model_validate({
+            "id": obj.get("id"),
+            "experiment_id": obj.get("experiment_id"),
+            "label": obj.get("label"),
+            "started_at": obj.get("started_at"),
+            "ended_at": obj.get("ended_at"),
+            "created_at": obj.get("created_at"),
+            "updated_at": obj.get("updated_at")
+        })
+        return _obj
